# SMMALA

./: .gitignore  README.md  pyproject.toml  results_wandb_table.py  run_testing.sh  run_testing_images.sh  run_training.sh  run_training_images.sh  train.py
configs/: get_image_embeddings.yaml
configs/test/: emb_subVneg.yaml  img_subVneg.yaml
configs/train/: emb_subVneg.yaml  emb_subVneg_slides.yaml  img_subVneg.yaml
get_embeddings/: get_augmented_image_and_embeddings.py  pack_embeddings.py  run_get_image_embeddings.sh
preprocessed_data/metadata/: slides_metadata.csv
preprocessed_data/train_test_splits/: test_fold0.csv  test_fold1.csv  test_fold2.csv  test_fold3.csv  train_fold0.csv  train_fold1.csv  train_fold2.csv  train_fold3.csv
src/common/layers/: attention.py  attention_pooling.py  lora.py  residual_gated_attention.py
src/common/losses/: focal.py  sosr.py
src/data/: classification_dataloader.py  collate.py  custom_datasets.py
src/data/splitters/: microscope_kfold_splitter.py
src/models/: cnn.py  slide_aggregator.py
src/utils/: __init__.py  misc.py  temperature_scaling.py  utils_confidence_thresholding.py  utils_config.py  utils_data.py  utils_eval.py  utils_logging.py  utils_model.py  utils_training.py  utils_visualization.py
