[project]
name = "malaria-detection"
version = "0.1.0"
description = "Smartphone based malaria detection"
authors = ["Nicolas Bourriez <nicolas.bourriez@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "opencv-contrib-python>=4.11.0.86",
    "pot>=0.9.5",
    "scikit-image>=0.25.2",
    "scikit-learn==1.6",
    "seaborn>=0.13.2",
    "tabpfn==2.1.3",
    "timm>=1.0.15",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "wandb>=0.20.1",
    "xgboost>=3.0.2",
]


[tool.ruff]
ignore = [
    "E501", # Never enforce `E501` (line length violations).
    "E731", # Do not assign a lambda expression, use a def
]
line-length = 119
indent-width = 4
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "E402", # Module level import not at top of file
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.pycodestyle]
max-doc-length = 150
